kubernetes/k3s/apps/monitoring/victoria/metrics/chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-metrics
  labels:
    app.kubernetes.io/name: vmsingle
    app.kubernetes.io/instance: metrics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: internal
  rules:
    - host: victoria.plexmox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-metrics
                port:
                  number: 8429
  tls:
    - hosts:
        - victoria.plexmox.com
      secretName: victoria-plexmox-com-tls
